# HaskellRayTracer

./: .gitignore  CHANGELOG.md  RayTracing.cabal  output.txt
app/: Main.hs
app/src/: Camera.hs  Main.hs  Point.hs  Ray.hs  Transformations.hs  Triangle.hs  Vector.hs
app/test-suite/: Main.hs
