cabal-version:      2.4
name:               RayTracing
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             eberg
maintainer:         eberg@primera.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable RayTracing
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.15.0.0,
                      matrix
    hs-source-dirs:   app/src
    default-language: Haskell2010
    other-modules: Transformations,
                   Triangle,
                   Point,
                   Vector,
                   Ray,
                   Camera


Test-Suite test-RayTracing
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     app/test-Suite
    build-depends:      base >=4.15.0.0,
                        matrix,
                        test-framework,
                        test-framework-hunit,
                        HUnit,
                        containers >= 0.5.0
